hw5 докинул немного тестов